Updated to support Java 8
Updated to for Java 8, added column header tool tips, minor code clean-up.